@startuml
skinparam backgroundColor #FFFFFF
!theme cerulean-outline

class Garage {
    +id: int
    +name: string
    +slug: string
    +adresse: string
    +zip_code: string
    +city: string
    +phone: string
}

class Cars {
    +id: int
    +name: string
    +slug: string
    +brand: string
    +model: string
    +content: text
    +price: int
    +kilometer: int
    +year: int
    +created_at: datetime
    +updated_at: datetime
}

class Images {
    +id: int
    +path: string
    +size: int
    +updated_at: datetime
    +created_at: datetime
}

class Users {
    +id: int
    +lastname: string
    +firstname: string
    +email: string
    +role: string
    +password: string
}

class Messages {
    +id: int
    +lastname: string
    +firstname: string
    +email: string
    +phone: string
    +subject: string
    +content: text
    +createdAt: datetime
}

class Opinions {
    +id: int
    +name: string
    +slug: string
    +content: text
    +notes: int
    +is_approved: bool
    +createdAt: datetime
    +updatedAt: datetime
}

class Services {
    +id: int
    +name: string
    +slug: string
    +content: text
    +is_approved: bool
    +price: int
    +category: string
}

class OpeningHours {
    +id: int
    +day: string
    +amOpenHours: string
    +amCloseHours: string
    +pmOpenHours: string
    +pmCloseHours: string
}

Garage "1" -- "0..*" Cars
Cars "1" -- "0..*" Images
Messages "*" - "1" Cars
Users "1" - "0..*" Opinions
Users "1" -- "*" Messages
'Opinions "1" - "0..1" Garage
Garage "1" - "*" Services
Garage "1" -- "*" OpeningHours

@enduml